--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Revista Bidoby/BIDOBY REVISTA/site/img/fff.jpg
 Revista Bidoby/BIDOBY REVISTA/site/img/fass.jpg
+Revista Bidoby/img/fass.jpg
+Revista Bidoby/img/fff.jpg
